# action-test

./: .gitignore  LICENSE  README.md  testfile.txt
.github/workflows/: c-cpp.yml  ci.yml
src/: CMakeLists.txt
test/: out.ll
